src/index.css
@import "tailwindcss";
@plugin "daisyui";

@plugin "daisyui/theme" {
  name: "light";
  default: true;
  --color-primary: #4F46E5;
  --color-accent: #10B981;
  --color-secondary: #1F2937;
  --color-base-100: #F9FAFB;
  --color-base-200: #F3F4F6;
  --color-base-300: #E5E7EB;
}

body {
  background-color: #F9FAFB;
}

.menu a.active {
  color: #10B981;
}

.dropdownBox {
  background-color: #1F2937;
  flex-direction: column;
  gap: 20px 0;
  color: white;
}

.dropdownBox p {
  border: 2px solid #4F46E5;
  padding: 5px 10px;
  border-radius: 8px;
}

.dropdownBox p:hover {
  background-color: white;
  color: #10B981;
  transition: .5s;
  border-radius: 8px;
}
.asideDash a{
  border: 2px solid rgb(190, 186, 186);
  border-radius: 10px;
  padding: 5px 10px;
}
.asideDash a:hover{
  background-color: rgb(205, 214, 214);
}
.asideDash a.active{
  background-color: silver;
  color: green;
}

